ensure hero doesn't go behind video when mobile

--- a/style.css
+++ b/style.css
@@ -35,6 +35,13 @@ hero {
   padding: 16px 30px 30px;
   display: block;
   max-height: 280px;
+  margin-bottom: 30px;
+}
+
+@media (max-width: 650px) {
+  hero > h2 {
+    font-size: 1.5rem;
+  }
 }
 
 .email > input {
@@ -75,12 +82,6 @@ nav {
   padding: 0;
 }
 
-@media (max-width: 650px) {
-  nav {
-    font-size: 0.9rem;
-    width: 156px;
-  }
-}
 
 .nav-link {
   color: #000;
@@ -88,18 +89,26 @@ nav {
   margin-left: 30px;
 }
 
+
+@media (max-width: 650px) {
+  .nav-link {
+    font-size: 0.8rem;
+    width: 80%;
+  }
+}
+
 #video {
   max-width: 600px;
-  width:100vw;
+  width:90%;
   height: calc(min(600px, 100vw) * 9 / 16);;
-  margin-bottom: 18.72px;
+  margin-bottom: 30px;
 }
 
 #pricing {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-bottom: 30px;
+  margin-bottom: 40px;
 }
 
 .plan {
